--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
-
+@font-face {
+  font-family: "pokemon";
+  src: url(Pokemon\ Hollow.ttf);
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -27,7 +30,7 @@ body {
   height: 100%;
   justify-content: center;
   margin: 0 auto 1rem auto;
-  max-width: 425px;
+  max-width: 430px;
   padding: 2%;
   width: 100%;
 }
@@ -35,38 +38,82 @@ body {
 .pokedex {
   background-color: var(--screen-color);
   border-radius: 20px;
-  border: 5px solid gray;
+  border: 5px solid white;
   height: 100%;
   padding: 5%;
   width: 100%;
+}
+
+.pokedex h1 {
+  text-align: center;
+  font-family: "pokemon";
+}
+
+.search {
+  align-items: center;
+  background-color: var(--screen-color);
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+  height: auto;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+#search-input {
+  height: 30%;
+  width: 100%;
+  background-color: white;
+  font-family: "VT323", monospace;
+  font-size: 1.5rem;
+  padding: 2%;
+  border-radius: 20px;
+  margin-bottom: 2%;
+}
+
+#search-button {
+  background: none;
+  border: none;
+  width: 30%;
+
+}
+
+#search-button:hover {
+  transform: scale(1.1);
+}
+
+#search-button img {
+  background-color: var(--body-color);
+  border-radius: 50%;
+  padding: 5%;
+  width: 40%;
 }
 
 .data-container {
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 2%;
-  height: 80%;
-  justify-content: center;
-  margin-bottom: 10%;
+  height: auto;
   width: 100%;
 }
 
 #img-container {
-  height: 30%;
+  height: auto;
   width: 100%;
+  margin-bottom: 5%;
 }
 
 #img-container img {
   display: block;
-  height: 100%;
+  height: auto;
   margin: 0 auto 0 auto;
   object-fit: contain;
-  width: 100%;
+  width: 50%;
 }
 
 .stats-table {
-  height: 60%;
+  height: 30%;
   width: 100%;
 }
 
@@ -80,45 +127,9 @@ body {
   text-align: center;
   width: 50%;
   font-family: "VT323", monospace;
-  font-size: 1.5rem;
+  font-size: 120%;
 }
 
-.search {
-  align-items: center;
-  background-color: var(--screen-color);
-  display: flex;
-  flex-direction: column;
-  gap: 10%;
-  height: 15%;
-  justify-content: center;
-  width: 100%;
-}
 
-#search-input {
-  height: 40%;
-  width: 100%;
-  background-color: var(--screen-color);
-  font-family: "VT323", monospace;
-  font-size: 1.5rem;
-  padding: 2%;
-}
-
-#search-button {
-  background: none;
-  border: none;
-  width: 50%;
-}
-
-#search-button:hover {
-  transform: scale(1.1);
-}
-
-#search-button img {
-  background-color: var(--body-color);
-  border-radius: 50%;
-  border: 1px solid black;
-  padding: 5%;
-  width: 40%;
-}
 
 
